[package]
name = "mtcap"
version = "0.2.0"
description = "Communication with MTCAP"
edition = "2021"
license = "MIT"
repository = "https://github.com/becky112358/mtcap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
strum = "0.23"
strum_macros = "0.23"
thiserror = "1.0"
